--- a/prologin/gcc/templates/gcc/users/login.html
+++ b/prologin/gcc/templates/gcc/users/login.html
@@ -1,7 +1,7 @@
 {% extends "gcc/base.html" %}
 {% load static %}
 
-{% block title %}GCC! − Connection{% endblock %}
+{% block title %}GCC! − Connexion{% endblock %}
 
 
 {% block header-popup %}
