gcc: more readable login/register forms

--- a/prologin/gcc/static/gcc/css/layout.css
+++ b/prologin/gcc/static/gcc/css/layout.css
@@ -275,6 +275,10 @@
     position: relative;
 }
 
+#header-popup label {
+    color: white;
+}
+
 #header-popup h2 {
     text-align: center;
     margin-bottom: 1em;
