--- a/prologin/gcc/templates/gcc/ressources.html
+++ b/prologin/gcc/templates/gcc/ressources.html
@@ -14,7 +14,7 @@
 </section>
 
 <section class="wrapper emph-infos">
-    <div class="title">Quel langage ?</div>
+  <div class="title">Quel langage ?</div>
     <div class="container">
       <p>
         Coder consiste à décrire des opérations que la machine exécutera, et pour communiquer avec la machine on doit choisir au préalable dans quel langage on va lui parler.
@@ -26,6 +26,7 @@
         C’est un langage assez facile à prendre en main (comparé à d’autres...) et qui a de nombreuses utilisations. Il est par exemple utilisé dans Youtube.
       </p>
     </div>
+  </div>
 </section>
 
 <section class="wrapper">
