--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -11,6 +11,9 @@
   <head>
     <title>{% block title %}Girls Can Code!{% endblock %}</title>
 
+    <link rel="stylesheet" href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'vendor/bootstrap/dist/css/bootstrap.min.css' %}"/>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="icon" type="image/png" href="{% static 'gcc/img/favicon.png' %}">
@@ -53,12 +56,14 @@
           {% if not user.is_authenticated %}
             <li class="pull-right">
               <a href="{% url 'gcc:register' %}">Inscription</a>
-              <a href="{% url 'gcc:login' %}">Connection</a>
+              <a href="{% url 'gcc:login' %}">Connexion</a>
             </li>
           {% else %}
             <li class="pull-right">
-              <a href="">{{ user.username }}</a>
-              <ul>
+              <a>{{ user.username }}</a>
+              <ul style="display:block">
+                <li><a href="{% url 'gcc:profile' user.id %}"><i class="fa fa-user"></i>Mon profile</a></li>
+                <li><a href="{% url 'gcc:edit' user.id %}"><i class="fa fa-cog"></i> Profil & options</a></li>
                 <li>
                   <form method="post" action="{% url 'users:logout' %}?next=/gcc">
                     {% csrf_token %}
